[gd_scene load_steps=12 format=3 uid="uid://d4kt43bnpyypi"]

[ext_resource type="Theme" uid="uid://dn3yugwq0ahwd" path="res://UI font.tres" id="1_2y422"]
[ext_resource type="Script" path="res://Email_App/email_reply.gd" id="1_kbp7h"]
[ext_resource type="PackedScene" uid="uid://dh821033oh3jw" path="res://Email_App/EmailOptions.tscn" id="3_ous7x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m86v5"]
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20
expand_margin_left = 6.0
expand_margin_top = 30.0
expand_margin_right = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6uqo7"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_riku3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ilpx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y5lty"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_os286"]
color = Color(0.752941, 0.752941, 0.752941, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_mtm2b"]
color = Color(0.752941, 0.752941, 0.752941, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yblkd"]
color = Color(0.754825, 0.754825, 0.754825, 1)
grow_begin = 0.0
grow_end = 20.0
thickness = 3

[node name="EmailReply" type="Window"]
title = "Composing Message"
position = Vector2i(0, 36)
size = Vector2i(500, 550)
theme = ExtResource("1_2y422")
theme_override_styles/embedded_border = SubResource("StyleBoxFlat_m86v5")
script = ExtResource("1_kbp7h")

[node name="TextureRect" type="Panel" parent="."]
offset_right = 500.0
offset_bottom = 550.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6uqo7")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 550.0

[node name="ToContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="TextureRect/VBoxContainer/ToContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_riku3")

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/ToContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_1ilpx")
text = "To:"

[node name="VSeparator2" type="VSeparator" parent="TextureRect/VBoxContainer/ToContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxTexture_y5lty")

[node name="To" type="Label" parent="TextureRect/VBoxContainer/ToContainer"]
layout_mode = 2
text = "A Person"

[node name="HSeparator2" type="HSeparator" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_os286")

[node name="SubjContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="TextureRect/VBoxContainer/SubjContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_riku3")

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer/SubjContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_1ilpx")
text = "Subject:"

[node name="VSeparator2" type="VSeparator" parent="TextureRect/VBoxContainer/SubjContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxTexture_y5lty")

[node name="Subject" type="Label" parent="TextureRect/VBoxContainer/SubjContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_mtm2b")

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="PreviewText" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(480, 200)
layout_mode = 2
theme_override_colors/font_color = Color(0.497474, 0.497474, 0.497474, 1)
text = "This is some sample text that hasn't been filled yet"
autowrap_mode = 3

[node name="TypedText" type="Label" parent="TextureRect/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(480, 200)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "This is some sample text"
autowrap_mode = 3

[node name="Separator" type="HSeparator" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_yblkd")

[node name="EmailOptions" parent="TextureRect/VBoxContainer" instance=ExtResource("3_ous7x")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_os286")

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="Send" type="TextureButton" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Attach" type="TextureButton" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2

[connection signal="option_exited" from="TextureRect/VBoxContainer/EmailOptions" to="." method="_on_option_exited"]
[connection signal="option_hovered" from="TextureRect/VBoxContainer/EmailOptions" to="." method="_on_option_hovered"]
[connection signal="option_selected" from="TextureRect/VBoxContainer/EmailOptions" to="." method="_on_option_selected"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Attach" to="." method="_on_attach_pressed"]
